# tech-screen-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.frontend  Dockerfile.vertex-mock  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.claude/agents/: README.md  backend-engineer.md  frontend-engineer.md  infra-engineer.md  prompt-engineer.md  reviewer.md
.github/workflows/: ci.yml  deploy.yml  promote.yml  rollback.yml  sync-configs.yml  sync-feature-flags.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
adr/: 001-stack-python-fastapi-nextjs-postgres.md  002-llm-provider-vertex-ai.md  003-model-selection-gemini-flash-pro.md  004-agent-architecture-2-plus-1.md  005-deterministic-orchestrator.md  006-hybrid-pre-interview-plan.md  007-pgvector-in-same-database.md  008-hybrid-prompt-language.md  009-prod-only-topology.md  010-docker-first-parity.md  011-feature-flags-self-hosted.md  012-cloud-run-traffic-splitting.md  013-no-plaintext-secrets.md  014-multi-agent-orchestration.md  015-region-europe-west1.md  016-auth-split-sso-magic-link.md  017-spec-driven-github-spec-kit.md  018-immutable-rubric-snapshots.md  019-append-only-audit-trail.md  020-correctness-variant-a-mvp.md  021-configs-as-code.md  022-env-example-non-secret-defaults.md  023-dev-prod-environments.md  024-identity-platform-internal-sso.md  README.md
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_feature_flags.py  0003_rubric_payload_hash.py  0004_position_template.py  0005_rubric_snapshot.py
app/backend/: generate_openapi.py  logging.py  main.py  openapi.yaml  settings.py
app/frontend/: .eslintrc.cjs  .gitignore  components.json  eslint.config.mjs  jest.config.ts  jest.setup.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tooling.d.ts  tsconfig.json
configs/: auth-roles.yaml  feature-flags.yaml  models.yaml
configs/rubric/: example.yaml
docs/: README.md  anti-patterns.md  architecture.docx  cloud-setup.md  coding-conventions.md  deploy-playbook.md  dev-briefing-2026-04-19.docx  glossary.md  implementation-plan.md  multi-agent-workflow.md  mvp-scope.docx  prompt-engineering-playbook.md  roadmap.docx  testing-strategy.md  vertex-integration.md
docs/contracts/: feature-flag.schema.json  id-token-claims.json  matrix-format.md  position-template.schema.json  rubric-snapshot.schema.json  rubric.schema.json
docs/design/: README.md  principles.md
docs/engineering/: anti-patterns.md  ci.md  cloud-setup.md  coding-conventions.md  deploy-playbook.md  directory-map.md  docker.md  feature-flags.md  glossary.md  implementation-plan.md  multi-agent-workflow.md  prompt-engineering-playbook.md  testing-strategy.md  tier1-checkpoint-2026-07.md  vertex-integration.md  vertex-quota.md
docs/specs/: agents.docx  architecture.docx  assessment-methodology.docx  data-model.docx
infra/: bootstrap.sh
infra/scripts/: vertex-smoke.sh
infra/terraform/: .gitignore  artifact_registry.tf  backend.tf  billing.tf  environments.tf  iam.tf  identity.tf  outputs.tf  services.tf  terraform.tfvars  variables.tf  versions.tf
prompts/: README.md
scripts/: check-feature-flag-registration.py  check-no-provider-sdk-imports.sh  check-rubric-schema.py  ci-detect-destructive-ddl.sh  ci-render-migration-sql.sh  ci-reviewer.sh  cloud-db-grants.sql  cloud-sql-power.sh  smoke-docker-stack.sh  sync_feature_flags_to_db.py  sync_rubric_to_db.py
(+330 files in other folders)
